--- a/source/index.html
+++ b/source/index.html
@@ -41,12 +41,12 @@
           <li class="menu__item"><a href="#">А-Я</a></li>
           <li class="menu__item menu__item--wrap"></li>
           <li class="menu__item menu__item--divider">Быстрый поиск:</li>
-          <li class="menu__item">
+          <li class="menu__item search">
             <form class="search__form" id="searchDepartment" action="javascript:search('searchDepartment','department');">
               <input class="search__input" id="department__search" type="text" placeholder="Поиск отдела..">
             </form>
           </li>
-          <li class="menu__item">
+          <li class="menu__item search">
             <form class="search__form" id="searchPerson" action="javascript:search('searchPerson','person');">
               <input class="search__input" id="person__search" type="text" placeholder="Поиск сотрудника..">
             </form>
