--- a/source/index.html
+++ b/source/index.html
@@ -42,12 +42,12 @@
           <li class="menu__item menu__item--wrap"></li>
           <li class="menu__item menu__item--divider">Быстрый поиск:</li>
           <li class="menu__item search">
-            <form class="search__form" id="searchDepartment" action="javascript:search('searchDepartment','department');">
+            <form class="search__form" id="searchDepartment" onsubmit="return false;" action="POST" autocomplete="off">
               <input class="search__input" id="department__search" type="text" placeholder="Поиск отдела..">
             </form>
           </li>
           <li class="menu__item search">
-            <form class="search__form" id="searchPerson" action="javascript:search('searchPerson','person');">
+            <form class="search__form" id="searchPerson" onsubmit="return false;" action="POST" autocomplete="off">
               <input class="search__input" id="person__search" type="text" placeholder="Поиск сотрудника..">
             </form>
           </li>
@@ -78,9 +78,9 @@
 
       <section class="employees">
         <h2 class="employees__title">ООО Газпром заборостроение Вашингтон</h2>
-        <h3 class="department">Руководство</h3>
+        <h3 class="department" data-text="Руководство">Руководство</h3>
         <ul class="employees__list">
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -95,7 +95,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Петров Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -110,7 +110,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -125,7 +125,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -140,7 +140,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Сидоров Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -155,7 +155,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Семенов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -170,7 +170,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Ли Ян Андреевич">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -186,9 +186,9 @@
             </p>
           </li>
         </ul>
-        <h3 class="department">Бухгалтерия</h3>
+        <h3 class="department" data-text="Бухгалтерия">Бухгалтерия</h3>
         <ul class="employees__list">
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -203,7 +203,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Петров Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -218,7 +218,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -233,7 +233,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -248,7 +248,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Сидоров Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -263,7 +263,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Семенов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -278,7 +278,7 @@
               </span>
             </p>
           </li>
-          <li class="person">
+          <li class="person" data-text="Ли Ян Андреевич">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -294,9 +294,9 @@
             </p>
           </li>
         </ul>
-        <h3 class="department">Отдел материально-технического снабжения и прочих особо важных дел, которые не вмещаются в строку</h3>
+        <h3 class="department" data-text="Отдел материально-технического снабжения и прочих особо важных дел, которые не вмещаются в строку">Отдел материально-технического снабжения и прочих особо важных дел, которые не вмещаются в строку</h3>
         <ul class="employees__list">
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -311,7 +311,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -326,7 +326,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -341,7 +341,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Иванов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -356,7 +356,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Сидоров Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -371,7 +371,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Семенов Александр Джахмудтинович">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
@@ -386,7 +386,7 @@
               </span>
             </p>
           </li>
-          <li class="person person--highlight">
+          <li class="person person--highlight" data-text="Ли Ян Андреевич">
             <a class="person__link popup-loader" href="person.html">
                 <img class="person__photo" src="img/person.jpg" alt="Иванов Иван Иванович" width="210" height="280">
               </a>
